--- a/src/Efforteo.Common/Efforteo.Common.csproj
+++ b/src/Efforteo.Common/Efforteo.Common.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App">
+      <NoWarn>NU1602,NU1604</NoWarn>
+    </PackageReference>
     <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
-    <!-- <PackageReference Include="RawRabbit.DependencyInjection.ServiceCollection" Version="2.0.0-rc5" /> -->
     <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc5" />
   </ItemGroup>
-
 </Project>
