Added activities repository with simple database initialization mechanism at startup

--- a/src/Efforteo.Services.Activities/appsettings.json
+++ b/src/Efforteo.Services.Activities/appsettings.json
@@ -28,5 +28,10 @@
       "Durable": true,
       "Exclusive": true
     }
+  },
+  "mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "Efforteo-Services-Activities",
+    "Seed" : true 
   }
 }
