--- a/src/Efforteo.Common/Efforteo.Common.csproj
+++ b/src/Efforteo.Common/Efforteo.Common.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App">
       <NoWarn>NU1602,NU1604</NoWarn>
     </PackageReference>
+    <PackageReference Include="MongoDB.Bson" Version="2.7.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
     <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc5" />
