Improved Identity service. JWT token authentication implemented

--- a/src/Efforteo.Api/Efforteo.Api.csproj
+++ b/src/Efforteo.Api/Efforteo.Api.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Efforteo.Common\Efforteo.Common.csproj" />
+    <ProjectReference Include="..\Efforteo.Services.Identity\Efforteo.Services.Identity.csproj" />
   </ItemGroup>
 
 </Project>
