--- a/src/Efforteo.Services.Activities/appsettings.json
+++ b/src/Efforteo.Services.Activities/appsettings.json
@@ -32,6 +32,11 @@
   "mongo": {
     "ConnectionString": "mongodb://localhost:27017",
     "Database": "Efforteo-Services-Activities",
-    "Seed" : true 
+    "Seed": true
+  },
+  "jwt": {
+    "secretKey": "$2VVDPcQFX8WP{:9v}sBg8tx3d(''As2>+KD9+4<",
+    "expiryMinutes": 5,
+    "issuer": "http://localhost:5000"
   }
 }
