--- a/src/Efforteo.Services.Identity/appsettings.json
+++ b/src/Efforteo.Services.Identity/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug"
     }
   },
   "AllowedHosts": "*",
@@ -28,5 +28,15 @@
       "Durable": true,
       "Exclusive": true
     }
-  }
+  },
+  "mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "Efforteo-Services-Identities",
+    "Seed": false
+  },
+  "jwt": {
+    "secretKey": "$2VVDPcQFX8WP{:9v}sBg8tx3d(''As2>+KD9+4<",
+    "expiryMinutes": 5,
+    "issuer": "http://localhost:5000"
+  } 
 }
