--- a/src/Efforteo.Api/appsettings.json
+++ b/src/Efforteo.Api/appsettings.json
@@ -10,7 +10,7 @@
     "Password": "guest",
     "VirtualHost": "/",
     "Port": 5672,
-    "Hostnames": ["localhost"],
+    "Hostnames": [ "localhost" ],
     "RequestTimeout": "00:00:10",
     "PublishConfirmTimeout": "00:00:01",
     "RecoveryInterval": "00:00:10",
@@ -28,5 +28,10 @@
       "Durable": true,
       "Exclusive": true
     }
+  },
+  "jwt": {
+    "secretKey": "$2VVDPcQFX8WP{:9v}sBg8tx3d(''As2>+KD9+4<",
+    "expiryMinutes": 5,
+    "issuer": "http://localhost:5000"
   }
 }
