Fixed docker configuration

--- a/scripts/docker-compose.yaml
+++ b/scripts/docker-compose.yaml
@@ -1,22 +1,13 @@
-version: "3"
+version: "3.4"
 
 services:
-  start-dep:
-    image: dadarek/wait-for-dependencies
-    depends_on:
-      - mongo
-      - rabbitmq
-    command: rabbitmq:5672
- 
-  mongo:
+  nosql.data:
     image: mongo
-    volumes:
-      - ./data/db:/data/db
     ports:
       - '27017:27017'
 
   rabbitmq:
-    image: rabbitmq
+    image: rabbitmq:3-management-alpine
     ports:
       - '5672:5672'
       - '15672:15672'
@@ -25,38 +16,25 @@ services:
     build: ../src/Efforteo.Api
     restart: on-failure
     depends_on:
-      - mongo
+      - nosql.data
       - rabbitmq
-    links:
-      - rabbitmq
-      - mongo
     ports:
       - '5000:5000'
-      - '5001:5001'
-  
+
   activities-service:
     build: ../src/Efforteo.Services.Activities
     restart: on-failure
     depends_on:
-      - mongo
+      - nosql.data
       - rabbitmq
-    links:
-      - rabbitmq
-      - mongo
     ports:
       - '5010:5000'
-      - '5011:5001'
 
   identity-service:
     build: ../src/Efforteo.Services.Identity
     restart: on-failure
     depends_on:
-      - mongo
+      - nosql.data
       - rabbitmq
-    links:
-      - rabbitmq
-      - mongo
     ports:
-      - '5020:5000'
-      - '5021:5001'
-
+     - '5020:5000'
