--- a/src/Efforteo.Services.Activities/Dockerfile
+++ b/src/Efforteo.Services.Activities/Dockerfile
@@ -1,6 +1,20 @@
-﻿FROM microsoft/dotnet:2.1-aspnetcore-runtime
-WORKDIR /dotnetapp
-COPY ./bin/Docker .
-ENV ASPNETCORE_URLS http://+:5000
-ENV ASPNETCORE_ENVIRONMENT Release
-ENTRYPOINT dotnet Efforteo.Services.Activities.dll
+﻿FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
+WORKDIR /app
+
+FROM microsoft/dotnet:2.1-sdk AS build
+WORKDIR /src
+COPY . .
+WORKDIR /src/Efforteo.Services.Activities
+RUN dotnet restore -nowarn:msb3202,nu1503
+RUN dotnet build --no-restore -c Release -o /app
+
+FROM build AS publish
+RUN dotnet publish --no-restore -c Release -o /app
+
+EXPOSE 5000/tcp
+ENV ASPNETCORE_URLS https://*:5000
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app .
+ENTRYPOINT ["dotnet", "Efforteo.Services.Activities.dll"]
