--- a/src/Efforteo.Services.Activities/Dockerfile
+++ b/src/Efforteo.Services.Activities/Dockerfile
@@ -2,5 +2,7 @@
 WORKDIR /dotnetapp
 COPY ./bin/Docker .
 ENV ASPNETCORE_URLS http://+:5000
+EXPOSE 5000/tcp
+EXPOSE 5001/tcp
 ENV ASPNETCORE_ENVIRONMENT Release
-ENTRYPOINT dotnet Efforteo.Services.Activities.dll
+ENTRYPOINT dotnet Efforteo.Api.dll
