--- a/src/Efforteo.Api/Efforteo.Api.csproj
+++ b/src/Efforteo.Api/Efforteo.Api.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
@@ -19,7 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Efforteo.Common\Efforteo.Common.csproj" />
-    <ProjectReference Include="..\Efforteo.Services.Identity\Efforteo.Services.Identity.csproj" />
   </ItemGroup>
 
 </Project>
