--- a/src/Efforteo.Common/Efforteo.Common.csproj
+++ b/src/Efforteo.Common/Efforteo.Common.csproj
@@ -6,6 +6,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.App">
       <NoWarn>NU1602,NU1604</NoWarn>
     </PackageReference>
