--- a/src/Efforteo.Services.Accounts/Dockerfile
+++ b/src/Efforteo.Services.Accounts/Dockerfile
@@ -5,4 +5,4 @@ ENV ASPNETCORE_URLS http://+:5000
 EXPOSE 5000/tcp
 EXPOSE 5001/tcp
 ENV ASPNETCORE_ENVIRONMENT Release
-ENTRYPOINT dotnet Efforteo.Services.Identity.dll
+ENTRYPOINT dotnet Efforteo.Services.Accounts.dll
