--- a/src/Efforteo.Services.Authentication/appsettings.json
+++ b/src/Efforteo.Services.Authentication/appsettings.json
@@ -10,7 +10,7 @@
     "Password": "guest",
     "VirtualHost": "/",
     "Port": 5672,
-    "Hostnames": [ "rabbitmq" ],
+    "Hostnames": [ "localhost" ],
     "RequestTimeout": "00:00:10",
     "PublishConfirmTimeout": "00:00:01",
     "RecoveryInterval": "00:00:10",
@@ -30,13 +30,13 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://mongo:27017",
-    "Database": "Efforteo-Services-Accounts",
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "Efforteo-Services-Authentication",
     "Seed": false
   },
   "jwt": {
     "secretKey": "$2VVDPcQFX8WP{:9v}sBg8tx3d(''As2>+KD9+4<",
     "expiryMinutes": 5,
     "issuer": "http://localhost:5000"
-  }
+  } 
 }
