--- a/src/Efforteo.Services.Authentication/Properties/launchSettings.json
+++ b/src/Efforteo.Services.Authentication/Properties/launchSettings.json
@@ -17,11 +17,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Efforteo.Services.Accounts": {
+    "Efforteo.Services.Authentication": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5025;http://localhost:5030",
+      "applicationUrl": "https://localhost:5025;http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
