--- a/src/Efforteo.Services.Api/Dockerfile
+++ b/src/Efforteo.Services.Api/Dockerfile
@@ -4,5 +4,6 @@ COPY ./bin/Docker .
 ENV ASPNETCORE_URLS http://+:5000
 EXPOSE 5000/tcp
 EXPOSE 5001/tcp
+EXPOSE 80
 ENV ASPNETCORE_ENVIRONMENT Release
-ENTRYPOINT dotnet Efforteo.Api.dll
+ENTRYPOINT dotnet Efforteo.Services.Api.dll
