--- a/src/Efforteo.WebApp/efforteo-webapp/package.json
+++ b/src/Efforteo.WebApp/efforteo-webapp/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "set-default-browser": "^1.0.1",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
