--- a/src/Efforteo.Services.Activities/Efforteo.Services.Activities.csproj
+++ b/src/Efforteo.Services.Activities/Efforteo.Services.Activities.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AutoMapper" Version="5.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="morelinq" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,9 @@
   <ItemGroup>
     <Reference Include="AutoMapper">
       <HintPath>..\..\..\..\Users\ezmadad\.nuget\packages\automapper\5.1.1\lib\netstandard1.3\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="MoreLinq">
+      <HintPath>..\..\..\..\Users\ezmadad\.nuget\packages\morelinq\3.0.0\lib\netstandard2.0\MoreLinq.dll</HintPath>
     </Reference>
   </ItemGroup>
 
