--- a/src/Efforteo.WebApp/efforteo-webapp/package.json
+++ b/src/Efforteo.WebApp/efforteo-webapp/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "startProxy": "ng serve --proxy-config proxy.conf.json",
+    "startProxy": "ng serve --proxy-config proxy.conf.dev.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,7 +23,6 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
-    "@progress/kendo-angular-inputs": "^3.5.0",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "ng2-charts": "^1.6.0",
