--- a/src/Efforteo.Services.Activities/appsettings.Release.json
+++ b/src/Efforteo.Services.Activities/appsettings.Release.json
@@ -30,7 +30,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://activities-db:27017",
     "Database": "Efforteo-Services-Activities",
     "Seed": true
   },
