--- a/src/Efforteo.Services.Stats/appsettings.Release.json
+++ b/src/Efforteo.Services.Stats/appsettings.Release.json
@@ -30,7 +30,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://stats-db:27017",
     "Database": "Efforteo-Services-Stats",
     "Seed": false
   },
