--- a/src/Efforteo.Services.Accounts/appsettings.Release.json
+++ b/src/Efforteo.Services.Accounts/appsettings.Release.json
@@ -30,7 +30,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://accounts-db:27017",
     "Database": "Efforteo-Services-Accounts",
     "Seed": false
   },
