--- a/src/Efforteo.Services.Authentication/appsettings.Release.json
+++ b/src/Efforteo.Services.Authentication/appsettings.Release.json
@@ -30,7 +30,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://auth-db:27017",
     "Database": "Efforteo-Services-Authentication",
     "Seed": false
   },
